Update src/main/resources/application-dev.yml, src/main/resources/application-local.yml, src/main/resources/application-prod.yml, src/main/resources/bootsrap.yml files

--- a/src/main/resources/bootsrap.yml
+++ b/src/main/resources/bootsrap.yml
@@ -5,7 +5,7 @@ server:
       enabled: false
 spring:
   application:
-    name: socshared-mail-sender-service
+    name: socshared-text-analyzer
   profiles:
     active: ${SPRING_PROFILE:local}
 
