--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {    //API Description Generator
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.5.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.1.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.1.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '2.2.2.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter', version: '2.2.2.RELEASE'
 
     //DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
