Добавленна поддeржка sentry

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,5 +14,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
-#service:
+service:
+  return_top: 100
+  send_sentry_top: 20
   #path-to-stop-words: ./stop_words.txt
