--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {    //API Description Generator
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.1.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.1.RELEASE'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter', version: '2.2.2.RELEASE'
-
+    //sentry
+    implementation 'io.sentry:sentry-spring:1.7.23'
+    implementation 'io.sentry:sentry:1.7.23'
     //DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.hibernate:hibernate-entitymanager'
