--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,16 @@ dependencies {    //API Description Generator
     //compile group: 'org.apache.lucene.morphology', name: 'russian', version: '1.5'
     implementation name: 'morph-1.5'
     implementation name: 'russian-1.5'
+    //feign (for security)
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.1.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-ribbon', version: '2.2.3.RELEASE'
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // Генерация JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.10.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.10.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.10.5'
+
 
     compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.2'
     //Test
