--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,7 +15,7 @@ spring:
     allow-bean-definition-overriding: true
 feign:
   url:
-    auth: ${AUTH_SERVICE:http://auth-service/}
+    auth: ${AUTH_SERVICE:https://auth-service:9999/}
 
 
 service:
