--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {    //API Description Generator
     //sentry
     implementation 'io.sentry:sentry-spring:1.7.23'
     implementation 'io.sentry:sentry:1.7.23'
+    //actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     //DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.hibernate:hibernate-entitymanager'
