--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ build:
   artifacts:
     paths:
       - build/libs/text-analyzer-service-1.0.0-SNAPSHOT.jar
+    expire_in: 1 hrs
 
 docker-build:
   stage: docker-build
