--- a/src/main/resources/sentry.properties
+++ b/src/main/resources/sentry.properties
@@ -1,2 +1,3 @@
-dsn=https://f8b14fbb18594358991e31acaf228812@sentry.socshared.ml/3
+dsn=https://a4e247788e44400ea18d3df6efaf7578@sentry.socshared.ml/5
+servername=socshared-text-analyzer
 stacktrace.app.packages=
