--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,7 @@ spring:
   zipkin:
     base-url: http://zipkin:9411/
     service:
-      name: "socshared-text-analyzer"
+      name: ${spring.application.name}
   main:
     allow-bean-definition-overriding: true
 
